fix gradient glitch on safari mobile

--- a/src/styles/nav.less
+++ b/src/styles/nav.less
@@ -14,7 +14,7 @@
 .navGradient{
   width: 100%;
   height: 180px;
-  background: linear-gradient(180deg, @gradientColor, rgba(255,255,255,0) 45%);
+  background: linear-gradient(180deg, @gradientColor, rgba(0,0,0,0.01) 45%);
   display: none;
 }
 
